Missing updates after geometry nodes drag and drop #86722

Closed
opened 2021-03-19 02:31:08 +01:00 by Zijun Zhou · 12 comments
Contributor

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-18 21:29, hash: 36deb8a48e
Worked: Never

Short description of error
The data in object info (e.g. Location) created by drag and drop does not update when moving the object in viewport, it is fixed after manually picking the object again. Here is video:
Drag and Drop Bug 1.mp4

Exact steps for others to reproduce the error
Based on the default startup

  1. Add Geometry Nodes to the cube, add a transform node
  2. Drag and drop the default light object in
  3. connect the location of Object Info node to the transform node's Translation socket
  4. Move the default light in viewport, the cube is not following
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-18 21:29, hash: `36deb8a48e` Worked: Never **Short description of error** The data in object info (e.g. Location) created by drag and drop does not update when moving the object in viewport, it is fixed after manually picking the object again. Here is video: [Drag and Drop Bug 1.mp4](https://archive.blender.org/developer/F9898820/Drag_and_Drop_Bug_1.mp4) **Exact steps for others to reproduce the error** Based on the default startup 1. Add Geometry Nodes to the cube, add a transform node 2. Drag and drop the default light object in 3. connect the location of Object Info node to the transform node's Translation socket 4. Move the default light in viewport, the cube is not following
Author
Contributor

Added subscriber: @Eary

Added subscriber: @Eary
Zijun Zhou changed title from Two Bugs of Geometry Nodes' Drag and Drop Object Collection to Two Bugs of Geometry Nodes' Drag and Drop Object into Object Info 2021-03-19 02:41:49 +01:00
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

First bug looks like a dependency issue. Possibly the drag node operator is missing a dependency tag update.

Second bug is not implemented, thanks for pointing this out.

First bug looks like a dependency issue. Possibly the drag node operator is missing a dependency tag update. Second bug is not implemented, thanks for pointing this out.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Thanks for the report! For the purpose of working on these issues and keeping track of fixes it's really much easier if they are in separate reports. Do you mind splitting up the second issue into a different report?

@CharlieJolly, do you mind taking a look at these issues?

EDIT: Oops, I see Charlie already has taken a look!

Thanks for the report! For the purpose of working on these issues and keeping track of fixes it's really much easier if they are in separate reports. Do you mind splitting up the second issue into a different report? @CharlieJolly, do you mind taking a look at these issues? EDIT: Oops, I see Charlie already has taken a look!
Member

@HooglyBoogly I fixed the update issue by calling ED_node_tag_update_nodetree see: P2039

The Paste Name operator is just not implemented. Doesn't work for shading nodes either. I added a condition to the poll so that it ignores drag and drop on the button.

I can commit this as a fix directly unless it's better to create a diff first.

@HooglyBoogly I fixed the update issue by calling `ED_node_tag_update_nodetree` see: [P2039](https://archive.blender.org/developer/P2039.txt) The `Paste Name` operator is just not implemented. Doesn't work for shading nodes either. I added a condition to the poll so that it ignores drag and drop on the button. I can commit this as a fix directly unless it's better to create a diff first.
Charlie Jolly self-assigned this 2021-03-19 14:30:21 +01:00
Member

Yeah, just make a diff.

Yeah, just make a diff.
Member

Added here: D10769

Added here: [D10769](https://archive.blender.org/developer/D10769)
Hans Goudey changed title from Two Bugs of Geometry Nodes' Drag and Drop Object into Object Info to Missing updates after geometry nodes drag and drop 2021-03-24 13:55:58 +01:00

This issue was referenced by 337a122e44

This issue was referenced by 337a122e44a3f6b28b8118c9fc4f06e397885c13

This issue was referenced by ce359da5b3

This issue was referenced by ce359da5b3ac98c9f7cfd6593cc1769ec3b7247b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86722
No description provided.